css_components/global/navbar.css
.navbar {
    display: grid;
    grid-template-areas:
        "links logo icons";
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    padding: .5rem 7rem;
    position: fixed;
    width: 100%;
    background-color: white;
    box-shadow: 0 0 0 4px rgba(0, 0, 0, .10);
    z-index: 1000;
}

.nav-links-wrapper ul {
    grid-area: links;
    display: flex;
    gap: 2rem;
    list-style-type: none;
    margin-top: .5rem;
}

.nav-menu {
    display: none;
}

.nav-logo-wrapper {
    grid-area: logo;
    display: flex;
    justify-content: center;
    letter-spacing: -2px;
}

.nav-icons-wrapper {
    grid-area: icons;
    display: flex;
    gap: 2rem;
    justify-content: end;
}

.cart-icon {
    display: flex;
    justify-content: center;
    font-size: 1rem;
}

@media (max-width: 1024px) {
    .navbar {
        padding: .5rem 1rem;
    }

    .nav-links-wrapper ul {
        display: none;
        position: absolute;
        box-shadow: 0 0 0 4px rgba(0, 0, 0, .10);
        background-color: white;
        flex-direction: column;
        padding: .5rem 1.3rem;
        align-items: start;
        width: 120vw;
        height: 100vh;
        left: -20px;
        gap: 1rem;
    }

    .nav-links-wrapper ul.show-nav-menu {
        display: flex;
    }

    .nav-menu {
        display: flex;
    }

    .nav-icons-wrapper {
        gap: 1rem;
    }

    .nav-icons-wrapper img {
        width: 20px;
    }

    .cart-badge {
        font-size: .8rem;
    }
}

